--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-torch==1.4.0
-numpy==1.17.4
-librosa==0.7.2
-scipy==1.4.1
-tensorboard==2.0
-soundfile==0.10.3.post1
-matplotlib==3.1.3
+torch==2.5.1
+numpy==2.0.2
+librosa==0.9.1
+scipy==1.15.1
+tensorboard==2.18.0
+soundfile==0.13.0
+matplotlib==3.10.0
